--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,1 +1,26 @@
 // Navigation code here
+nav {
+  background: @nav-bg;
+  .container {
+    .flex();
+    justify-content: center;
+    border-bottom: 2px solid @nav-border;
+    h1 {
+      width: 100%;
+      text-align: center;
+      font-family: "Russo One";
+      color: @nav-font;
+      font-size: 4.2rem;
+      padding: 2rem 0 1rem;
+    }
+    a {
+      text-decoration: none;
+      font-size: 2rem;
+      color: @nav-font;
+      padding: 1rem 1.5rem;
+      &:hover {
+        text-decoration: underline;
+      }
+    }
+  }
+}
