--- a/less/home-page.less
+++ b/less/home-page.less
@@ -59,6 +59,16 @@
       }
 
       .btn {
+        cursor: pointer;
+        display: inline;
+        .btncolors(@btn-bg-color, @porcelain);
+        padding: 0.5rem 1.5rem;
+        font-size: 2rem;
+        border: 2px solid @btn-bg-color;
+        border-radius: 5px;
+        &:hover {
+          .btncolors(@porcelain, @btn-bg-color);
+        }
       }
     }
 
