--- a/less/mixins.less
+++ b/less/mixins.less
@@ -3,3 +3,11 @@
   display: flex;
   flex-wrap: wrap;
 }
+.navcolors(@bg, @text) {
+  background: @bg;
+  color: @text;
+}
+.btncolors(@bg, @text) {
+  background: @bg;
+  color: @text;
+}
