--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,6 +1,6 @@
 // Navigation code here
 nav {
-  background: @nav-bg;
+  .navcolors(@nav-bg, @nav-font);
   .container {
     .flex();
     justify-content: center;
@@ -9,14 +9,14 @@ nav {
       width: 100%;
       text-align: center;
       font-family: "Russo One";
-      color: @nav-font;
       font-size: 4.2rem;
+      color: inherit;
       padding: 2rem 0 1rem;
     }
     a {
       text-decoration: none;
       font-size: 2rem;
-      color: @nav-font;
+      color: inherit;
       padding: 1rem 1.5rem;
       &:hover {
         text-decoration: underline;
