--- a/css/index.css
+++ b/css/index.css
@@ -206,6 +206,11 @@ footer {
 .home .intro img {
   border-radius: 5px;
 }
+@media screen and (max-width:500px) {
+  .home .intro img {
+    width: 100%;
+  }
+}
 .home .space-images {
   display: flex;
   flex-wrap: wrap;
@@ -216,6 +221,15 @@ footer {
   margin: 20px 2.5%;
   border-radius: 20px;
   height: 100%;
+}
+@media screen and (max-width:500px) {
+  .home .space-images img {
+    width: 90%;
+    margin: 20px auto;
+  }
+  .home .space-images img:not(:first-child) {
+    display: none;
+  }
 }
 .home .visit-planets {
   padding: 15px;
@@ -233,8 +247,19 @@ footer {
   display: flex;
   justify-content: center;
 }
+@media screen and (max-width:500px) {
+  .home .walk {
+    flex-wrap: wrap;
+    padding: 2rem;
+  }
+}
 .home .walk .walk-text {
   width: 50%;
+}
+@media screen and (max-width:500px) {
+  .home .walk .walk-text {
+    width: 100%;
+  }
 }
 .home .walk .walk-text h3 {
   margin-bottom: 10px;
@@ -256,9 +281,23 @@ footer {
   background: #f6f7f8;
   color: #22283a;
 }
+@media screen and (max-width:500px) {
+  .home .walk .walk-text .btn {
+    display: block;
+    padding: 2rem;
+    text-align: center;
+  }
+}
 .home .walk .walk-img {
   width: 46%;
   margin-left: 4%;
+}
+@media screen and (max-width:500px) {
+  .home .walk .walk-img {
+    width: 100%;
+    margin: 0 0 2rem 0;
+    order: -1;
+  }
 }
 .home .walk .walk-img img {
   width: 100%;
