--- a/less/home-page.less
+++ b/less/home-page.less
@@ -12,6 +12,9 @@
 
     img {
       border-radius: 5px;
+      @media @phone {
+        width: 100%;
+      }
     }
   }
 
@@ -25,6 +28,15 @@
       margin: 20px 2.5%;
       border-radius: 20px;
       height: 100%;
+      @media @phone {
+        width: 90%;
+        margin: 20px auto;
+        &:not(:first-child) {
+          display: none;
+        }
+      } //img
+      @media @phone {
+      }
     }
   }
 
@@ -46,10 +58,16 @@
     padding: 50px 60px;
     display: flex;
     justify-content: center;
+    @media @phone {
+      flex-wrap: wrap;
+      padding: 2rem;
+    }
 
     .walk-text {
       width: 50%;
-
+      @media @phone {
+        width: 100%;
+      }
       h3 {
         margin-bottom: 10px;
       }
@@ -69,12 +87,22 @@
         &:hover {
           .btncolors(@porcelain, @btn-bg-color);
         }
+        @media @phone {
+          display: block;
+          padding: 2rem;
+          text-align: center;
+        }
       }
     }
 
     .walk-img {
       width: 46%;
       margin-left: 4%;
+      @media @phone {
+        width: 100%;
+        margin: 0 0 2rem 0;
+        order: -1;
+      }
 
       img {
         width: 100%;
