--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,6 +1,11 @@
 // Navigation code here
 nav {
   .navcolors(@nav-bg, @nav-font);
+  position: fixed;
+  width: 100%;
+  top: 0;
+  left: 0;
+  opacity: 95%;
   .container {
     .flex();
     justify-content: center;
