quick button adjust

--- a/less/home-page.less
+++ b/less/home-page.less
@@ -94,6 +94,9 @@
           display: block;
           padding: 2rem;
           text-align: center;
+          &:hover {
+            padding: 2rem;
+          }
         }
       }
     }
