--- a/css/index.css
+++ b/css/index.css
@@ -298,6 +298,9 @@ footer {
     padding: 2rem;
     text-align: center;
   }
+  .home .walk .walk-text .btn:hover {
+    padding: 2rem;
+  }
 }
 .home .walk .walk-img {
   width: 46%;
